--- a/packages/ffe-message-box/less/theme.less
+++ b/packages/ffe-message-box/less/theme.less
@@ -21,6 +21,12 @@
     --ffe-v-message-box-error-bg-color: var(--ffe-farge-baer-30);
     --ffe-v-message-box-error-icon-color: var(--ffe-farge-baer);
 
+    /** Link colors */
+    --ffe-v-message-box-link-color: var(--ffe-farge-vann);
+    --ffe-v-message-box-link-color-hover: var(--ffe-farge-fjell);
+    --ffe-v-message-box-link-color-visited: var(--ffe-farge-lyng);
+    --ffe-v-message-box-link-color-focus: var(--ffe-farge-hvit);
+
     @media (prefers-color-scheme: dark) {
         .native {
             --ffe-v-message-box-info-bg-color: var(--ffe-farge-vann-30);
